--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,2 @@
-@import url("https://fonts.googleapis.com/css?family=Karla:weight@400;700&display=swap");
-
-$font: "Karla", sans-serif;
-$primary-color: #3e6f9e;
-
-body {
-  font-family: $font;
-  color: $primary-color;
-}
+@import  './styles/reset';
+@import './styles/main';
