task-4 components-part-2

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -13,6 +13,10 @@
   border-radius: 5px;
 }
 
+.addMovieButton:hover {
+  cursor: pointer;
+}
+
 .searchHeader {
   text-transform: uppercase;
   color: $color-white;
